# coref-onnx

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/coref_onnx/: __init__.py
src/spacy_coref/: __init__.py  coref_resolver.py  spacy_component.py
